Cleaned messy files.

--- a/emulator/Makefile
+++ b/emulator/Makefile
@@ -1,6 +1,6 @@
 FILES += cpu.c
 FILES += main.c
-EXECUTABLE = 6502_emu
+EXECUTABLE = 6502_emulator
 
 all:
 	gcc $(FILES) $(LIBRARIES) -o $(EXECUTABLE)
